--- a/brythonSolution/index.html
+++ b/brythonSolution/index.html
@@ -39,8 +39,8 @@
         height: 20%;
     }
 </style>
-<script type="text/javascript" src="brython.js"></script>
-<script type="text/javascript" src="brython_stdlib.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.10.4/brython.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.10.4/brython_stdlib.js"></script>
 </head>
 <body onload="brython()">
 <h3>Task: Display π <button id="run_code" class="btn btn-info" onclick="getCode()">Run</button></h3>
